k8s/ingress/ingress-letsencrypt.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eduscheduler-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - eduscheduler.eu
        - www.eduscheduler.eu
      secretName: eduscheduler-tls-secret
  rules:
    - host: eduscheduler.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-frontend
                port:
                  number: 80
    - host: www.eduscheduler.eu
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-frontend
                port:
                  number: 80
