k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eduscheduler-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 13.62.198.13
      secretName: eduscheduler-tls-secret
  rules:
    - host: 13.62.198.13
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: eduscheduler-frontend
                port:
                  number: 80
